--- a/pipeline.yml
+++ b/pipeline.yml
@@ -61,5 +61,5 @@ stages:
                     ls -l 
                     # Modify deployment script based on the app type
                     echo "Starting deployment script run"
-                    sudo cp '$(Pipeline.Workspace)/petclinic/**/target/*.war /opt/tomcat/webapps/petclinic.war 
+                    sudo cp $(Pipeline.Workspace)/petclinic/**/target/*.war /opt/tomcat/webapps/petclinic.war 
 
