--- a/pipeline.yml
+++ b/pipeline.yml
@@ -8,7 +8,7 @@ variables:
   - name: Deploy
     value: true  
   - name: AgentPool
-    value: SelfHosted
+    value: MyAgentPool
   - name: DeployEnvironment
     value: kops-dev-web  
 stages:
