--- a/.github/workflows/dev-workflow.yml
+++ b/.github/workflows/dev-workflow.yml
@@ -34,3 +34,21 @@ jobs:
         with:
           name: petclinic_${{ github.run_number}}.war
           path: target/petclinic.war
+          retention-days: 2
+      
+      # Docker Login
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+
+     # Build & Push docekr iamge
+
+    
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: kbaddi/petclinic:${{github.run_number}}
