removed push & updated name

--- a/.github/workflows/dev-workflow.yml
+++ b/.github/workflows/dev-workflow.yml
@@ -1,13 +1,10 @@
 name: SpringApp CI-CD
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: Build & Deploy Springboot App  🚀
 on: 
   push:
     branches:
       - "development"
       
-  pull_request:
-    branches: 
-      - "development"
 
 jobs:
   buildApp:
