--- a/.github/workflows/dev-workflow.yml
+++ b/.github/workflows/dev-workflow.yml
@@ -32,7 +32,15 @@ jobs:
           name: petclinic_${{ github.run_number}}.war
           path: target/petclinic.war
           retention-days: 2
-      
+
+      # Dowload Artifact
+      - name: Download  Artifacts
+        id: download_artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: petclinic_${{ github.run_number}}.war
+          path: ./petclinic.war
+          retention-days: 2
       # Docker Login
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -40,10 +48,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-
      # Build & Push docekr iamge
-
-    
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
