disabled docker build cache

--- a/.github/workflows/dev-workflow.yml
+++ b/.github/workflows/dev-workflow.yml
@@ -51,6 +51,8 @@ jobs:
      # Build & Push docekr iamge
       - name: Build and push
         uses: docker/build-push-action@v4
+        
         with:
           push: true
           tags: kbaddi/petclinic:${{github.run_number}}
+          no-cache: true
