--- a/.github/workflows/dev-workflow.yml
+++ b/.github/workflows/dev-workflow.yml
@@ -39,20 +39,20 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: petclinic_${{ github.run_number}}.war
-          
+
       # Docker Login
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # - run: docker build . -t kbaddi/petclinic:${{ github.run_number }}
-      # - run: docker push kbaddi/petclinic:${{ github.run_number }}
-     # Build & Push docker iamge
-      - name: Build and push
-        uses: docker/build-push-action@v4
+      - run: docker build . -t kbaddi/petclinic:${{ github.run_number }}
+      - run: docker push kbaddi/petclinic:${{ github.run_number }}
+    #  # Build & Push docker iamge
+    #   - name: Build and push
+    #     uses: docker/build-push-action@v4
         
-        with:
-          push: true
-          tags: kbaddi/petclinic:${{github.run_number}}
-          no-cache: true
+    #     with:
+    #       push: true
+    #       tags: kbaddi/petclinic:${{github.run_number}}
+    #       no-cache: true
